# ai-commit

./: README.md  main.py  pyproject.toml  setup.py
ai_commit/: cli.py  constants.py
ai_conventional_commit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
