[tool.poetry]
name = "ai-conventional-commit"
version = "0.2.0"
description = "AI-powered conventional commit message generator using Claude"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_commit"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
anthropic = "^0.18.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai-commit = "ai_commit.cli:cli"